PessoaModel, PessoaMoldesController e banco de dados criados.

--- a/Web Aplication Trainee VIxTeam/appsettings.json
+++ b/Web Aplication Trainee VIxTeam/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Web_Aplication_Trainee_VIxTeamContext": "Server=(localdb)\\mssqllocaldb;Database=master;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
